fix(VCombobox): correct chips spacing
Add top and bottom margins for chips when used with compact or
comfortable density.
fixes #15686

--- a/packages/vuetify/src/components/VCombobox/VCombobox.sass
+++ b/packages/vuetify/src/components/VCombobox/VCombobox.sass
@@ -4,6 +4,10 @@
 @use '../../styles/tools'
 @use './variables' as *
 
+@at-root
+  @include tools.density('v-input', $combobox-chips-margin-bottom) using ($modifier)
+    --combobox-chips-margin-bottom: #{0px + math.div($modifier, 2)}
+
 .v-combobox
   .v-field
     .v-text-field__prefix,
@@ -62,6 +66,7 @@
   &--chips
     .v-combobox__selection
       margin-top: $combobox-chips-margin-top
+      margin-bottom: var(--combobox-chips-margin-bottom)
 
       &:first-child
         margin-inline-start: 0
